{
    "name": "UiControls",
    "maps": [
        {
            "name": "GameSceneMap",
            "id": "522b72aa-178f-4ebd-9bfb-963d595ab01b",
            "actions": [
                {
                    "name": "ToggleOptions",
                    "type": "Button",
                    "id": "a9d3804d-422f-4373-af02-e4c15bfffe44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EscPressed",
                    "type": "Button",
                    "id": "bc1fcc5d-27c3-46ca-a830-5bffb516a489",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleCraftingMenu",
                    "type": "Button",
                    "id": "7ca1e8ee-4eae-4ad0-ae78-918e674eb5ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39f15204-3011-4ff8-9ce2-babd12868196",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleOptions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "659198a6-6442-4d28-8029-42897fcfb9d0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EscPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "651ef646-3d49-440b-a3f1-955d8ca9cc93",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleCraftingMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ObjectPlacementMap",
            "id": "8910d009-3840-43c9-b1fd-b4439044e8e6",
            "actions": [
                {
                    "name": "PlaceObject",
                    "type": "Button",
                    "id": "db84f024-cd5c-4d22-afe7-f0fefc314757",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4a323fb-a435-4c37-adea-394e8734b991",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HotbarControls",
            "id": "7fabcb6e-ae14-455f-8dc1-53786d718583",
            "actions": [
                {
                    "name": "SelectSlot7",
                    "type": "Button",
                    "id": "3c6a129d-ea8c-4858-a5f6-df10c7aa1987",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot6",
                    "type": "Button",
                    "id": "937b8951-4763-419d-85bd-0b3f676a8bb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot5",
                    "type": "Button",
                    "id": "5be86a8a-7e8f-43ef-9937-cf516220e27f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot4",
                    "type": "Button",
                    "id": "67e839df-7eda-4dce-a8ec-fbd0fe85df3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot3",
                    "type": "Button",
                    "id": "4d12baa1-40ff-4f83-a626-3e8e8daade93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot2",
                    "type": "Button",
                    "id": "c9732d6d-ec4d-476c-938d-12b43133aadf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot1",
                    "type": "Button",
                    "id": "6accd5b3-b63a-451e-8100-c5a3bf8791c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot0",
                    "type": "Button",
                    "id": "9be1a35d-7652-4e1c-906b-4906dc18f265",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a898dd2c-1039-4a7e-b911-d6b5407df450",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "603e7e5b-cdc6-4e70-af92-1454a164f1bf",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b4737da-d28a-4203-bb0a-8e71529b3a60",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64dd85de-fc0e-47ac-81af-e81b64b89b2e",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0004fcc-9115-4d67-ad6f-194a005bf66a",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d691320d-1de9-4e38-982e-6ab344c75eb4",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d19f8406-1ef5-446d-8e25-e30a4dd5ad11",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5895680f-ccd1-484f-9f90-c32b906906fe",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}